--- a/web/bower.json
+++ b/web/bower.json
@@ -9,7 +9,9 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "please-wait": "^0.0.5",
+    "SpinKit": "spinkit#^1.2.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
