--- a/web/bower.json
+++ b/web/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "please-wait": "^0.0.5",
-    "SpinKit": "spinkit#^1.2.5"
+    "SpinKit": "spinkit#^1.2.5",
+    "bootstrap-angular-validation": "^1.0.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
