--- a/web/bower.json
+++ b/web/bower.json
@@ -12,7 +12,8 @@
     "angular-touch": "^1.4.0",
     "please-wait": "^0.0.5",
     "SpinKit": "spinkit#^1.2.5",
-    "bootstrap-angular-validation": "^1.0.7"
+    "bootstrap-angular-validation": "^1.0.7",
+    "angular-toastr": "^2.1.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
