--- a/web/bower.json
+++ b/web/bower.json
@@ -13,7 +13,8 @@
     "please-wait": "^0.0.5",
     "SpinKit": "spinkit#^1.2.5",
     "bootstrap-angular-validation": "^1.0.7",
-    "angular-toastr": "^2.1.1"
+    "angular-toastr": "^2.1.1",
+    "angular-timeline": "^1.7.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
