--- a/web/bower.json
+++ b/web/bower.json
@@ -14,7 +14,9 @@
     "SpinKit": "spinkit#^1.2.5",
     "bootstrap-angular-validation": "^1.0.7",
     "angular-toastr": "^2.1.1",
-    "angular-timeline": "^1.7.0"
+    "angular-timeline": "^1.7.0",
+    "animate.css": "^3.5.2",
+    "angular-scroll-animate": "^0.9.9"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
