--- a/web/package.json
+++ b/web/package.json
@@ -39,6 +39,8 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "karma start test\\karma.conf.js"
+    "test": "karma start test\\karma.conf.js",
+    "start": "grunt serve",
+    "build": "grunt build"
   }
 }
