--- a/web/bower.json
+++ b/web/bower.json
@@ -17,7 +17,8 @@
     "angular-timeline": "^1.7.0",
     "animate.css": "^3.5.2",
     "angular-scroll-animate": "^0.9.9",
-    "angular-timeago": "^0.4.6"
+    "angular-timeago": "^0.4.6",
+    "ngstorage": "^0.3.11"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
