--- a/android/RaddulFasad/app/src/main/AndroidManifest.xml
+++ b/android/RaddulFasad/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.ikodepc_1.raddulfasad">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
     <application
         android:allowBackup="true"
