--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
     "express": "~4.15.5",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "aws-sdk": ">= 2.0.9",
+    "node-uuid": ">= 1.4.1"
   }
 }
