--- a/server/package.json
+++ b/server/package.json
@@ -6,15 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
+    "aws-sdk": ">= 2.0.9",
+    "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "^2.5.7",
     "express": "~4.15.5",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5",
-    "aws-sdk": ">= 2.0.9",
-    "node-uuid": ">= 1.4.1"
+    "node-uuid": ">= 1.4.1",
+    "path": "^0.12.7",
+    "serve-favicon": "~2.4.5"
   }
 }
