--- a/web/bower.json
+++ b/web/bower.json
@@ -19,7 +19,8 @@
     "angular-scroll-animate": "^0.9.9",
     "angular-timeago": "^0.4.6",
     "ng-google-signin": "^0.1.0",
-    "aws-sdk": "aws-sdk-js#^2.198.0"
+    "aws-sdk": "aws-sdk-js#^2.198.0",
+    "hover": "^2.1.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
