--- a/functions/package.json
+++ b/functions/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.1",
+    "@types/request": "^2.47.0",
+    "apiai": "^4.0.3",
     "cors": "^2.8.4",
     "firebase-admin": "^5.7.0",
-    "firebase-functions": "^0.8.1"
+    "firebase-functions": "^0.8.1",
+    "request": "^2.83.0"
   },
   "private": true,
   "devDependencies": {
