--- a/web/bower.json
+++ b/web/bower.json
@@ -21,7 +21,8 @@
     "ng-google-signin": "^0.1.0",
     "aws-sdk": "aws-sdk-js#^2.198.0",
     "hover": "^2.1.1",
-    "angular-bootstrap": "^2.5.0"
+    "angular-bootstrap": "^2.5.0",
+    "ngstorage": "^0.3.11"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
