--- a/web/bower.json
+++ b/web/bower.json
@@ -20,7 +20,8 @@
     "aws-sdk": "aws-sdk-js#^2.198.0",
     "hover": "^2.1.1",
     "angular-bootstrap": "^2.5.0",
-    "ngstorage": "^0.3.11"
+    "ngstorage": "^0.3.11",
+    "angular-timer": "^1.3.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
