--- a/functions/package.json
+++ b/functions/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@types/cors": "^2.8.1",
     "@types/request": "^2.47.0",
+    "actions-on-google": "^2.4.1",
     "apiai": "^4.0.3",
     "bcrypt-inzi": "^1.0.7",
     "cors": "^2.8.4",
-    "firebase-admin": "^5.7.0",
-    "firebase-functions": "^0.8.1",
+    "dialogflow-fulfillment": "^0.6.1",
+    "firebase-admin": "^5.13.1",
+    "firebase-functions": "^2.0.5",
     "request": "^2.83.0"
   },
   "private": true,
