--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.1",
+    "@types/mongoose": "^5.3.26",
     "@types/request": "^2.47.0",
     "actions-on-google": "^2.4.1",
     "apiai": "^4.0.3",
@@ -18,6 +19,7 @@
     "dialogflow-fulfillment": "^0.6.1",
     "firebase-admin": "^5.13.1",
     "firebase-functions": "^2.0.5",
+    "mongoose": "^5.5.1",
     "request": "^2.83.0"
   },
   "private": true,
